Adding cover photo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spencer & Emma</title>
+    <title>Spencer + Emma</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
@@ -35,6 +35,16 @@
             </div>
         </div>
     </nav>
+    <section id="profile">
+        <div class="section__pic-container">
+            <img src="./assets/cover.jpg" alt="Spencer + Emma Cover Photo">
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">
+                June 22, 2024 · Asheville, North Carolina
+            </p>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
