--- a/index.html
+++ b/index.html
@@ -42,12 +42,51 @@
     <section id="cover">
         <div class="section__pic-container">
             <img src="./assets/cover.jpeg" alt="Spencer + Emma Cover Photo">
+            <div class="section__text">
+                <p class="section__text__p1">
+                    June 22, 2024 · Asheville, North Carolina
+                </p>
+            </div>
         </div>
-        <div class="section__text">
-            <p class="section__text__p1">
-                June 22, 2024 · Asheville, North Carolina
+
+        <div class="section__text__2">
+            <p class="section__text__p2">
+                Please join us on June 22, 2022 as we celebrate our wedding in Asheville.
             </p>
         </div>
+
+        <div class="section__pic-container__2">
+            <img src="./assets/hugging.jpeg" alt="Hugging">
+            <img src="./assets/holding-hands.jpeg" alt="Holding Hands">
+            <img src="./assets/chilling.jpeg" alt="Chilling">
+        </div>
+
+        <div class="section__text__3">
+            <p class="section__text__p3">
+                Our Story
+            </p>
+        </div>
+
+        <div class="section__text__4">
+            <p class="section__text__p4">
+                We met in 2018 while working together on the same engineering team at Centene in St. Louis, MO. 
+                Spencer had a crush on me from the day that he started, but I had no idea. I found out about 
+                this crush about 6 months later while we were walking to our cars together one afternoon. He said 
+                that it would be cool if we went out sometime after work. I thought he meant as a team, so I 
+                mentioned how I thought it would be great for our team to bond outside of work. However, what he 
+                actually was trying to get was a date. I could tell by his body language that he didn’t mean what 
+                I had thought and as soon as I got into my car I felt terrible! Later on, I told him that I would 
+                love to hang out with him sometime. We went on an official date a couple of days later and ended 
+                up staying up until 3am the next day. I think we both knew at that moment that we had something 
+                really special.
+            </p>
+            <p class="section__text__p4">
+                Through the years that we have been together, we have moved from 
+                STL to Denver, Colorado and then finally to Huntsville, Alabama where we have decided to call 
+                home. It has been an incredible journey and we are so excited to get married in June! 
+            </p>
+        </div>
+        
     </section>
 
     <script src="script.js"></script>
