--- a/index.html
+++ b/index.html
@@ -122,9 +122,15 @@
                 <p class="dress-code-text">
                     Dress Code
                 </p>
-                <p class="cocktail-party-text">
-                    Cocktail Party
+                <p class="garden-party-text">
+                    Garden Party
                 </p>
+                <p class="garden-party-idea-text">
+                    <a href="https://www.pinterest.com/ecklenke9/garden-party-attire/" target="_blank">
+                        Idea Board
+                    </a>
+                </p>
+            
             </div>
             
             <div class="color-scheme">
@@ -134,6 +140,22 @@
                 <p class="color-scheme-spring-neutral-text">
                     Spring Neutral
                 </p>
+                <div class="color-circle-section">
+                    <div class="circle-1">
+                    </div>
+                    <div class="circle-2">
+                    </div>
+                    <div class="circle-3">
+                    </div>
+                    <div class="circle-4">
+                    </div>
+                    <div class="circle-5">
+                    </div>
+                    <div class="circle-6">
+                    </div>
+                    <div class="circle-7">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
