adding mobile adjustments

--- a/index.html
+++ b/index.html
@@ -40,34 +40,33 @@
     </nav>
 
     <div id="cover">
-        <div class="cover__pic-container">
+        <div class="cover-pic-container">
             <img src="./assets/cover.jpeg" alt="Spencer + Emma Cover Photo">
-            <div class="cover__text">
-                <p class="cover__text__p1">
+            <div class="cover-text">
+                <p class="cover-text-p1">
                     June 22, 2024 · Asheville, North Carolina
                 </p>
             </div>
         </div>
 
-        <div class="cover__text__2">
+        <div class="cover-text-2">
             Please join us on June 22, 2024 as we celebrate our wedding in Asheville, NC.
         </div>
     </div>
     
-    <section id="our-story">
+    <section id="our-story-section">
 
-        <div class="our-story__pic-container">
-            <img src="./assets/hugging.jpeg" alt="Hugging">
-            <img src="./assets/holding-hands.jpeg" alt="Holding Hands">
-            <img src="./assets/chilling.jpeg" alt="Chilling">
+        <div class="our-story-pic-container">
+            <img class="our-story-side-image" src="./assets/hugging.jpeg" alt="Hugging">
+            <img class="our-story-middle-image" src="./assets/holding-hands.jpeg" alt="Holding Hands">
+            <img class="our-story-side-image" src="./assets/chilling.jpeg" alt="Chilling">
         </div>
 
-        <div class="our-story__title">
-            Our Story
-        </div>
-
-        <div class="our-story__text__4">
-            <p class="our-story__text__p4">
+        <div class="our-story-text-4">
+            <div class="our-story-title" id="our-story">
+                Our Story
+            </div>
+            <p class="our-story-text-p4">
                 We met in 2018 while working together on the same engineering team at Centene in St. Louis, MO. 
                 Spencer had a crush on me from the day that he started, but I had no idea. I found out about 
                 this crush about 6 months later while we were walking to our cars together one afternoon. He said 
@@ -79,20 +78,20 @@
                 up staying up until 3am the next day. I think we both knew at that moment that we had something 
                 really special.
             </p>
-            <p class="our-story__text__p4">
+            <p class="our-story-text-p4">
                 Through the years that we have been together, we have moved from 
-                STL to Denver, Colorado and then finally to Huntsville, Alabama where we have decided to call 
+                St. Louis, MO to Denver, CO and then finally to Huntsville, AL where we have decided to call 
                 home. It has been an incredible journey and we are so excited to get married in June! 
             </p>
         </div>
         
     </section>
 
-    <section id="wedding">
-        <div class="wedding__pic-container">
+    <section id="wedding-section">
+        <div class="wedding-pic-container" id="wedding">
             <img src="./assets/big-smiles.jpg" alt="Big Smiles">
-            <div class="wedding__text">
-                <p class="wedding__text__p1">
+            <div class="wedding-text">
+                <p class="wedding-text-p1">
                     Wedding Information
                 </p>
             </div>
