cleaning up css classes

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                 <p class="cover-text-p1">
                     June 22, 2024 · Asheville, North Carolina
                 </p>
+                <p class="cover-text-p2">
+                    June 22, 2024
+                </p>
+                <p class="cover-text-p2">
+                    Asheville, North Carolina
+                </p>
             </div>
         </div>
     </div>
@@ -101,8 +107,8 @@
         </div>
 
         <div class="wedding-info">
-            <div class="reception">
-                <p class="reception-text">
+            <div class="wedding-info-title-text">
+                <p class="wedding-info-sub-title-text">
                     Reception
                 </p>
                 <a href="https://www.google.com/maps/dir//rhubarb+asheville/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x8859f3577734a82b:0xf5bfd2c965ec38f4?sa=X&ved=2ahUKEwjN8ompk4OBAxXQgGoFHS1gAVUQ9Rd6BAgeEAA&ved=2ahUKEwjN8ompk4OBAxXQgGoFHS1gAVUQ9Rd6BAg0EAU" target="_blank">
@@ -123,8 +129,8 @@
                 </p>
             </div>
             
-            <div class="dress-code">
-                <p class="dress-code-text">
+            <div class="wedding-info-title-text">
+                <p class="wedding-info-sub-title-text">
                     Dress Code
                 </p>
                 <p class="garden-party-text">
@@ -140,8 +146,8 @@
                 </a>
             </div>
             
-            <div class="color-scheme">
-                <p class="color-scheme-text">
+            <div class="wedding-info-title-text">
+                <p class="wedding-info-sub-title-text">
                     Color Scheme
                 </p>
                 <p class="color-scheme-spring-neutral-text">
