--- a/index.html
+++ b/index.html
@@ -193,12 +193,13 @@
 
         <div class="travel-info">
             <div class="hotel-title-text">
+                <img class="hotel-images" src="./assets/arras.jpeg" alt="Kimpton Hotel Arras">
                 <p class="hotel-title-text-p">
-                    AC Hotel Asheville Downtown
+                    Kimpton Hotel Arras
                 </p>
                 <p>
                     <p class="hotel-address-text">
-                        10 Broadway St
+                        7 Patton Ave
                     </p>
                     <p class="hotel-address-text">
                         Asheville, NC 28801
@@ -207,6 +208,7 @@
             </div>
         
             <div class="hotel-title-text">
+                <img class="hotel-images" src="./assets/restoration.jpg" alt="Restoration Hotel">
                 <p class="hotel-title-text-p">
                     The Restoration Asheville
                 </p>
@@ -221,6 +223,7 @@
             </div>
             
             <div class="hotel-title-text">
+                <img class="hotel-images" src="./assets/foundry.jpeg" alt="Foundry Hotel">
                 <p class="hotel-title-text-p">
                     The Foundry Hotel Asheville
                 </p>
@@ -235,6 +238,7 @@
             </div>
 
             <div class="hotel-title-text">
+                <img class="hotel-images" src="./assets/wrong-way.jpeg" alt="Wrong Way Hotel">
                 <p class="hotel-title-text-p">
                     Wrong Way River Lodge & Cabins
                 </p>
