adding website link
Co-authored-by: Spencer Tyminski <nynjaorca@gmail.com>

--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
                 <p class="hotel-title-text-p">
                     Kimpton Hotel Arras
                 </p>
+                <a class="hotel-link" href="https://www.hotelarras.com" target="_blank">
+                    www.hotelarras.com
+                </a>
                 <p>
                     <p class="hotel-address-text">
                         7 Patton Ave
@@ -212,6 +215,9 @@
                 <p class="hotel-title-text-p">
                     The Restoration Asheville
                 </p>
+                <a class="hotel-link" href="https://therestorationhotel.com/asheville-nc-restoration-hotel" target="_blank">
+                    www.therestorationhotel.com
+                </a>
                 <p>
                     <p class="hotel-address-text">
                         68 Patton Ave
@@ -221,12 +227,16 @@
                     </p>
                 </p>
             </div>
-            
+        </div>
+        <div class="travel-info">
             <div class="hotel-title-text">
                 <img class="hotel-images" src="./assets/foundry.jpeg" alt="Foundry Hotel">
                 <p class="hotel-title-text-p">
                     The Foundry Hotel Asheville
                 </p>
+                <a class="hotel-link" href="https://www.foundryasheville.com/" target="_blank">
+                    www.foundryasheville.com
+                </a>
                 <p>
                     <p class="hotel-address-text">
                         51 S Market St
@@ -242,6 +252,9 @@
                 <p class="hotel-title-text-p">
                     Wrong Way River Lodge & Cabins
                 </p>
+                <a class="hotel-link" href="https://www.wrongwaycampground.com/" target="_blank">
+                    www.wrongwaycampground.com
+                </a>
                 <p>
                     <p class="hotel-address-text">
                         9 Midnight Dr
@@ -255,7 +268,7 @@
     </section>
 
     <section id="gift-section">
-        <div class="gift-pic-container" id="gift">
+        <div class="gift-pic-container" id="gifts">
             <img src="./assets/gift.jpg" alt="Gift">
             <div class="gift-text">
                 <p class="gift-text-p1">
@@ -274,12 +287,6 @@
                         </span>
                     </div>
                 </a>
-            </div>
-            
-            <div class="gift-title-text">
-                <p>
-                    Venmo
-                </p>
             </div>
         </div>
     </section>
