Linking hotel addresses

--- a/index.html
+++ b/index.html
@@ -200,14 +200,19 @@
                 <a class="hotel-link" href="https://www.hotelarras.com" target="_blank">
                     www.hotelarras.com
                 </a>
-                <p>
-                    <p class="hotel-address-text">
-                        7 Patton Ave
-                    </p>
-                    <p class="hotel-address-text">
-                        Asheville, NC 28801
-                    </p>
-                </p>
+                <a class="linked-address" href="https://www.google.com/maps/dir/35.5665451,-82.5726796/7+Patton+Ave,+Asheville,+NC+28806/@35.5808929,-82.5880371,14z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x8859f3577566ea57:0xeb5b9c62fc450d9b!2m2!1d-82.5521879!2d35.5952443?entry=ttu" target="_blank">
+                    <div>
+                        <p class="link-text">
+                            7 Patton Ave
+                        </p>
+                        <span class="link-text">
+                            Asheville, NC 28801
+                        </span>
+                    </div>
+                    <span class="material-symbols-outlined">
+                        location_on
+                    </span>
+                </a>
             </div>
         
             <div class="hotel-title-text">
@@ -218,14 +223,19 @@
                 <a class="hotel-link" href="https://therestorationhotel.com/asheville-nc-restoration-hotel" target="_blank">
                     www.therestorationhotel.com
                 </a>
-                <p>
-                    <p class="hotel-address-text">
-                        68 Patton Ave
-                    </p>
-                    <p class="hotel-address-text">
-                        Asheville, NC 28801
-                    </p>
-                </p>
+                <a class="linked-address" href="https://www.google.com/maps/dir//68+Patton+Ave,+Asheville,+NC+28801/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x8859f356e5e8710d:0x8a0d07a0b29315ba?sa=X&ved=2ahUKEwid6ui-6ZOBAxVsIUQIHR1lCiQQwwV6BAgSEAA&ved=2ahUKEwid6ui-6ZOBAxVsIUQIHR1lCiQQwwV6BAgUEAQ" target="_blank">
+                    <div>
+                        <p class="link-text">
+                            68 Patton Ave
+                        </p>
+                        <span class="link-text">
+                            Asheville, NC 28801
+                        </span>
+                    </div>
+                    <span class="material-symbols-outlined">
+                        location_on
+                    </span>
+                </a>
             </div>
             
             <div class="hotel-title-text">
@@ -236,14 +246,19 @@
                 <a class="hotel-link" href="https://www.foundryasheville.com/" target="_blank">
                     www.foundryasheville.com
                 </a>
-                <p>
-                    <p class="hotel-address-text">
-                        51 S Market St
-                    </p>
-                    <p class="hotel-address-text">
-                        Asheville, NC 28801
-                    </p>
-                </p>
+                <a class="linked-address" href="https://www.google.com/maps/dir//51+S+Market+St,+Asheville,+NC+28801/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x8859f359ebb9c495:0x11bd2011c4f96996?sa=X&ved=2ahUKEwiT18zk6ZOBAxVml2oFHaN_BSgQwwV6BAgSEAA&ved=2ahUKEwiT18zk6ZOBAxVml2oFHaN_BSgQwwV6BAgUEAQ" target="_blank">
+                    <div>
+                        <p class="link-text">
+                            51 S Market St
+                        </p>
+                        <span class="link-text">
+                            Asheville, NC 28801
+                        </span>
+                    </div>
+                    <span class="material-symbols-outlined">
+                        location_on
+                    </span>
+                </a>
             </div>
 
             <div class="hotel-title-text">
@@ -254,14 +269,19 @@
                 <a class="hotel-link" href="https://www.wrongwaycampground.com/" target="_blank">
                     www.wrongwaycampground.com
                 </a>
-                <p>
-                    <p class="hotel-address-text">
-                        9 Midnight Dr
-                    </p>
-                    <p class="hotel-address-text">
-                        Asheville, NC 28806
-                    </p>
-                </p>
+                <a class="linked-address" href="https://www.google.com/maps/dir//9+Midnight+Dr,+Asheville,+NC+28806/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x88598d057c79c69d:0x3fddc5db477b6641?sa=X&ved=2ahUKEwjM8cWQ6pOBAxX4l2oFHUgxCSAQwwV6BAgSEAA&ved=2ahUKEwjM8cWQ6pOBAxX4l2oFHUgxCSAQwwV6BAgUEAQ" target="_blank">
+                    <div>
+                        <p class="link-text">
+                            9 Midnight Dr
+                        </p>
+                        <span class="link-text">
+                            Asheville, NC 28806
+                        </span>
+                    </div>
+                    <span class="material-symbols-outlined">
+                        location_on
+                    </span>
+                </a>
             </div>
         </div>
     </section>
