tidying up css classes
changed everything to REMs and made sure all sizing and spacing was still correct and uniform

--- a/index.html
+++ b/index.html
@@ -59,14 +59,11 @@
                 </p>
             </div>
         </div>
+        <div class="invite-text">
+            Please join us on June 22, 2024 as we celebrate our wedding in Asheville, NC. 
+        </div>
     </div>
     
-    <section class="invite-text">
-        <div class="cover-text-2">
-            Please join us on June 22, 2024 as we celebrate our wedding in Asheville, NC.
-        </div>
-    </section>
-
     <section id="our-story-section">
 
         <div class="our-story-pic-container">
