amazon and target registries

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/gift.css">
     <link rel="stylesheet" href="css/our-story.css">
+    <link rel="stylesheet" href="css/rsvp.css">
     <link rel="stylesheet" href="css/travel.css">
     <link rel="stylesheet" href="css/wedding.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -293,19 +294,73 @@
             </div>
         </div>
 
-        <div class="gift-info">
-            <div class="gift-title-text">
-                <a href="https://www.zola.com/registry/spencerandemma2024" target="_blank">
-                    <div class="gift-link-container">
-                        <span class="link-text">Zola Registry</span>
-                        <span class="material-symbols-outlined">
-                            open_in_new
-                        </span>
-                    </div>
-                </a>
+        <div class="collective-gift-info">
+            <div class="gift-info">
+                <div class="gift-title-text">
+                    <a href="https://www.zola.com/registry/spencerandemma2024" target="_blank">
+                        <div class="gift-link-container">
+                            <span class="link-text">Zola</span>
+                            <span class="material-symbols-outlined">
+                                open_in_new
+                            </span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="gift-info">
+                <div class="gift-title-text">
+                    <a href="https://www.amazon.com/wedding/spencer-tyminski-emma-klenke-asheville-june-2024/registry/237K05JS052HI" target="_blank">
+                        <div class="gift-link-container">
+                            <span class="link-text">Amazon</span>
+                            <span class="material-symbols-outlined">
+                                open_in_new
+                            </span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="gift-info">
+                <div class="gift-title-text">
+                    <a href="https://www.target.com/gift-registry/gift/spencer-and-emma-2024" target="_blank">
+                        <div class="gift-link-container">
+                            <span class="link-text">Target</span>
+                            <span class="material-symbols-outlined">
+                                open_in_new
+                            </span>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
+<!-- 
+    <section id="rsvp-section">
+        <div class="rsvp-pic-container" id="rsvp-pic-container">
+            <img src="./assets/gift.jpg" alt="RSVP">
+            <div class="rsvp-text">
+                <p class="rsvp-text-p1">
+                    RSVP
+                </p>
+            </div>
+        </div>
+
+        <div class="rsvp-info">
+            <div class="rsvp-title-text">
+                Please let us know if you will be attending
+            </div>
+        </div>
+        <div class="rsvp-form">
+            <div class="rsvp-form-field">
+                <input class="rsvp-form-field-1" id="first-name" placeholder=" First Name" type="text"/>
+            </div>            
+            <div class="rsvp-form-field">
+                <input class="rsvp-form-field-1" id="last-name" placeholder=" Last Name" type="text"/>
+            </div> 
+            <div class="rsvp-form-field">
+                <input class="rsvp-form-field-1" id="age" placeholder=" Age" type="number"/>
+            </div> 
+        </div>
+    </section> -->
 
     <script src="script.js"></script>
 </body>
