--- a/index.html
+++ b/index.html
@@ -50,18 +50,21 @@
             <img src="./assets/cover.jpeg" alt="Spencer + Emma Cover Photo">
             <div class="cover-text">
                 <p class="cover-text-p1">
-                    June 22, 2024 · Asheville, North Carolina
-                </p>
-                <p class="cover-text-p2">
-                    June 22, 2024
-                </p>
-                <p class="cover-text-p2">
-                    Asheville, North Carolina
+                    WE ARE GETTING MARRIED!
                 </p>
             </div>
         </div>
-        <div class="invite-text">
-            Please join us on June 22, 2024 as we celebrate our wedding in Asheville, NC. 
+        <div class="invite-text-p1">
+            Spencer Tyminski
+        </div>
+        <div class="invite-text-p2">
+            &
+        </div>
+        <div class="invite-text-p3">
+            Emma Klenke
+        </div>
+        <div class="invite-text-p4">
+            June 22, 2024 · Asheville, North Carolina 
         </div>
     </div>
     
