adding rsvp form and updating a few pics

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     <section id="travel-section">
         <div class="travel-pic-container" id="travel">
-            <img src="./assets/travel.jpeg" alt="Asheville">
+            <img src="./assets/travel.jpg" alt="Asheville">
             <div class="travel-text">
                 <p class="travel-text-p1">
                     Travel Information
@@ -368,10 +368,10 @@
             </div>
         </div>
     </section>
-<!-- 
+
     <section id="rsvp-section">
         <div class="rsvp-pic-container" id="rsvp-pic-container">
-            <img src="./assets/gift.jpg" alt="RSVP">
+            <img src="./assets/rsvp.jpg" alt="RSVP">
             <div class="rsvp-text">
                 <p class="rsvp-text-p1">
                     RSVP
@@ -381,21 +381,13 @@
 
         <div class="rsvp-info">
             <div class="rsvp-title-text">
-                Please let us know if you will be attending
+                Please let us know if you will be attending in the form below. Thank you! 
             </div>
         </div>
         <div class="rsvp-form">
-            <div class="rsvp-form-field">
-                <input class="rsvp-form-field-1" id="first-name" placeholder=" First Name" type="text"/>
-            </div>            
-            <div class="rsvp-form-field">
-                <input class="rsvp-form-field-1" id="last-name" placeholder=" Last Name" type="text"/>
-            </div> 
-            <div class="rsvp-form-field">
-                <input class="rsvp-form-field-1" id="age" placeholder=" Age" type="number"/>
-            </div> 
+            <script type="text/javascript" src="https://form.jotform.com/jsform/240215333582045"></script>
         </div>
-    </section> -->
+    </section>
 
     <script src="script.js"></script>
 </body>
