Fixing the RSVP button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a class="nav-title" href="#wedding">Wedding</a></li>
                 <li><a class="nav-title" href="#travel">Travel</a></li>
                 <li><a class="nav-title" href="#gifts">Gifts</a></li>
-                <li id="rsvp"><a href="#rsvp">RSVP</a></li>
+                <li><a class="nav-title" href="#rsvp-pic-container">RSVP</a></li>
             </ul>
         </div>
     </nav>
@@ -40,7 +40,7 @@
                 <li><a href="#wedding" onclick="toggleMenu()">Wedding</a></li>
                 <li><a href="#travel" onclick="toggleMenu()">Travel</a></li>
                 <li><a href="#gifts" onclick="toggleMenu()">Gifts</a></li>
-                <li><a href="#rsvp" onclick="toggleMenu()">RSVP</a></li>
+                <li><a href="#rsvp-pic-container" onclick="toggleMenu()">RSVP</a></li>
             </div>
         </div>
     </nav>
