Adding blue to the color palette

--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
                         </div>
                         <div class="circle-7">
                         </div>
+                        <div class="circle-8">
+                        </div>
                     </div>
                 </div>
                 
