--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spencer & Emma</title>
-    <link rel="icon" type="image/x-icon" href="./assets/s&e.jpg">
+    <link rel="icon" type="image/x-icon" href="./assets/new-logo.jpg">
     <link rel="stylesheet" href="css/cover.css">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/gift.css">
