Adding hotels and airbnbs

--- a/index.html
+++ b/index.html
@@ -271,6 +271,98 @@
                     </span>
                 </a>
             </div>
+
+            <div class="hotel-title-text">
+                <img class="hotel-images" src="./assets/wrong-way.jpeg" alt="Wrong Way Hotel">
+                <p class="hotel-title-text-p">
+                    Wrong Way River Lodge & Cabins
+                </p>
+                <a class="hotel-link" href="https://www.wrongwaycampground.com/" target="_blank">
+                    www.wrongwaycampground.com
+                </a>
+                <a class="linked-address" href="https://www.google.com/maps/dir//9+Midnight+Dr,+Asheville,+NC+28806/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x88598d057c79c69d:0x3fddc5db477b6641?sa=X&ved=2ahUKEwjM8cWQ6pOBAxX4l2oFHUgxCSAQwwV6BAgSEAA&ved=2ahUKEwjM8cWQ6pOBAxX4l2oFHUgxCSAQwwV6BAgUEAQ" target="_blank">
+                    <div>
+                        <p class="link-text">
+                            9 Midnight Dr
+                        </p>
+                        <span class="link-text">
+                            Asheville, NC 28806
+                        </span>
+                    </div>
+                    <span class="material-symbols-outlined">
+                        location_on
+                    </span>
+                </a>
+            </div>
+
+            <div class="hotel-title-text">
+                <img class="hotel-images" src="./assets/hotel-indigo.jpeg" alt="Hotel Indigo">
+                <p class="hotel-title-text-p">
+                    Hotel Indigo Asheville Downtown
+                </p>
+                <a class="hotel-link" href="https://www.ashevilleindigo.com/" target="_blank">
+                    www.ashevilleindigo.com
+                </a>
+                <a class="linked-address" href="https://www.google.com/maps/dir/34.6309794,-86.4326472/151+Haywood+St,+Asheville,+NC+28801/@35.4087865,-85.7561722,8z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x8859f355a358480b:0x114dcb5134e9935c!2m2!1d-82.5584362!2d35.5966852?entry=ttu" target="_blank">
+                    <div>
+                        <p class="link-text">
+                            151 Haywood St
+                        </p>
+                        <span class="link-text">
+                            Asheville, NC 28801
+                        </span>
+                    </div>
+                    <span class="material-symbols-outlined">
+                        location_on
+                    </span>
+                </a>
+            </div>
+
+            <div class="hotel-title-text">
+                <img class="hotel-images" src="./assets/holiday-inn.jpg" alt="Holiday Inn">
+                <p class="hotel-title-text-p">
+                    Holiday Inn Asheville - Biltmore West
+                </p>
+                <a class="hotel-link" href="https://www.ihg.com/holidayinn/hotels/us/en/asheville/avlpp/hoteldetail?cm_mmc=GoogleMaps-_-HI-_-US-_-AVLPP" target="_blank">
+                    www.ihg.com
+                </a>
+                <a class="linked-address" href="https://www.google.com/maps/dir/34.6309794,-86.4326472/435+Smokey+Park+Hwy,+Asheville,+NC+28806/@34.8339058,-85.8677816,8z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x88598dd3a8e7d55f:0xd8869a7a98148166!2m2!1d-82.6410505!2d35.5570929?entry=ttu" target="_blank">
+                    <div>
+                        <p class="link-text">
+                            435 Smokey Park Hwy
+                        </p>
+                        <span class="link-text">
+                            Asheville, NC 28806
+                        </span>
+                    </div>
+                    <span class="material-symbols-outlined">
+                        location_on
+                    </span>
+                </a>
+            </div>
+
+            <div class="hotel-title-text">
+                <img class="hotel-images" src="./assets/marriott.jpeg" alt="Marriott">
+                <p class="hotel-title-text-p">
+                    TownePlace Suites Asheville Downtown
+                </p>
+                <a class="hotel-link" href="https://www.marriott.com/en-us/hotels/avlts-towneplace-suites-asheville-downtown/overview/" target="_blank">
+                    www.marriott.com
+                </a>
+                <a class="linked-address" href="https://www.google.com/maps/dir/34.6309794,-86.4326472/39+Elm+St,+Asheville,+NC+28801/@34.6309794,-86.4326472,12z/data=!4m9!4m8!1m1!4e1!1m5!1m1!1s0x8859f5aebebdea07:0x99f4377b0e85f236!2m2!1d-82.5522989!2d35.6004872?entry=ttu" target="_blank">
+                    <div>
+                        <p class="link-text">
+                            39 Elm St
+                        </p>
+                        <span class="link-text">
+                            Asheville, NC 28801
+                        </span>
+                    </div>
+                    <span class="material-symbols-outlined">
+                        location_on
+                    </span>
+                </a>
+            </div>
         
             <div class="hotel-title-text">
                 <img class="hotel-images" src="./assets/restoration.jpg" alt="Restoration Hotel">
@@ -319,25 +411,9 @@
             </div>
 
             <div class="hotel-title-text">
-                <img class="hotel-images" src="./assets/wrong-way.jpeg" alt="Wrong Way Hotel">
-                <p class="hotel-title-text-p">
-                    Wrong Way River Lodge & Cabins
-                </p>
-                <a class="hotel-link" href="https://www.wrongwaycampground.com/" target="_blank">
-                    www.wrongwaycampground.com
-                </a>
-                <a class="linked-address" href="https://www.google.com/maps/dir//9+Midnight+Dr,+Asheville,+NC+28806/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x88598d057c79c69d:0x3fddc5db477b6641?sa=X&ved=2ahUKEwjM8cWQ6pOBAxX4l2oFHUgxCSAQwwV6BAgSEAA&ved=2ahUKEwjM8cWQ6pOBAxX4l2oFHUgxCSAQwwV6BAgUEAQ" target="_blank">
-                    <div>
-                        <p class="link-text">
-                            9 Midnight Dr
-                        </p>
-                        <span class="link-text">
-                            Asheville, NC 28806
-                        </span>
-                    </div>
-                    <span class="material-symbols-outlined">
-                        location_on
-                    </span>
+                <img class="hotel-images" src="./assets/airbnb.png" alt="Airbnb">
+                <a class="airbnbs" href="https://www.airbnb.com/wishlists/v/1428599701?viralityEntryPoint=49&s=76" target="_blank">
+                    Also, feel free to check out these Airbnbs around the area!
                 </a>
             </div>
         </div>
