--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 <a class="hotel-link" href="https://www.marriott.com/en-us/hotels/avlts-towneplace-suites-asheville-downtown/overview/" target="_blank">
                     www.marriott.com
                 </a>
-                <a class="linked-address" href="https://www.google.com/maps/dir/34.6309794,-86.4326472/39+Elm+St,+Asheville,+NC+28801/@34.6309794,-86.4326472,12z/data=!4m9!4m8!1m1!4e1!1m5!1m1!1s0x8859f5aebebdea07:0x99f4377b0e85f236!2m2!1d-82.5522989!2d35.6004872?entry=ttu" target="_blank">
+                <a class="linked-address" href="https://www.google.com/maps/dir/34.6309794,-86.4326472/39+Elm+St,+Asheville,+NC+28801/@34.9736521,-85.7460326,8z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x8859f5aebebdea07:0x99f4377b0e85f236!2m2!1d-82.5522989!2d35.6004872?entry=ttu" target="_blank">
                     <div>
                         <p class="link-text">
                             39 Elm St
